<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#7E7E7E"
    android:backgroundTint="#7E7E7E"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageMovie"
        android:layout_width="78dp"
        android:layout_height="61dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/descargas" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="214dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="96dp"
        android:text="@string/titulo"
        android:textColor="#F4F1F1" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="218dp"
        android:layout_height="34dp"
        android:layout_below="@+id/tvTitulo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="93dp"
        android:text="@string/url"
        android:textColor="#F4F2F2" />

</RelativeLayout>


