<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        style="@style/ShapeAppearance.MaterialComponents.Tooltip"
        android:layout_width="327dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="22dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="24dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="293dp"
            android:layout_height="56dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="24dp"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/numero_ss"
            android:inputType="number"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="325dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="289dp"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="43dp"
        android:layout_height="56dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/login"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|start|center_horizontal"
        android:layout_marginStart="48dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="64dp"
        android:enabled="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSelectHandle="@android:drawable/ic_menu_send" />

</LinearLayout>